content/_generated-doc/2.16/config/quarkus-smallrye-jwt.adoc

:summaryTableId: quarkus-smallrye-jwt
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-smallrye-jwt_configuration]]link:#quarkus-smallrye-jwt_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-jwt_quarkus.smallrye-jwt.enabled]]`link:#quarkus-smallrye-jwt_quarkus.smallrye-jwt.enabled[quarkus.smallrye-jwt.enabled]`

[.description]
--
The MP-JWT configuration object

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_JWT_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_JWT_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-jwt_quarkus.smallrye-jwt.rsa-sig-provider]]`link:#quarkus-smallrye-jwt_quarkus.smallrye-jwt.rsa-sig-provider[quarkus.smallrye-jwt.rsa-sig-provider]`

[.description]
--
The name of the `java.security.Provider` that supports SHA256withRSA signatures

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_JWT_RSA_SIG_PROVIDER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_JWT_RSA_SIG_PROVIDER+++`
endif::add-copy-button-to-env-var[]
--|string 
|`SunRsaSign`


a| [[quarkus-smallrye-jwt_quarkus.smallrye-jwt.blocking-authentication]]`link:#quarkus-smallrye-jwt_quarkus.smallrye-jwt.blocking-authentication[quarkus.smallrye-jwt.blocking-authentication]`

[.description]
--
Enable this property if fetching the remote keys can be a time-consuming operation. Do not enable it if you use the local keys.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_JWT_BLOCKING_AUTHENTICATION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_JWT_BLOCKING_AUTHENTICATION+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`

|===